cirq simulate and return bardata and table stats

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -114,6 +114,7 @@
                   <select id="simSelectId">
                     <option value="client">Client machine</option>
                     <option value="qAer">Qiskit Aer backend</option>
+                    <option value="cirq">Cirq backend</option>
                   </select>
                 </div>
               </div>
