--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -266,8 +266,7 @@
         </div>
         <div class="simulate-content">
           <div id="canvasSimWrapper">
-            <canvas id="drawCanvasSim" class="hide">
-            </canvas>
+            <canvas id="drawCanvasSim" class="hide"></canvas>
             <div id="bloch-sphere">
               <img src="./images/blochsphere.png" alt="bloch-sphere" />
             </div>
