--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -60,7 +60,7 @@
           </button>
         </div>
         <div class="gate-area-body">
-          <label class="gate-area-body-section-label">Common gates</label>
+          <label class="gate-area-body-section-label">Code-enabled Gates</label>
           <div class="gate-area-body-common-gates">
             <div class="gateList">
               <div id="common-gates">
@@ -72,7 +72,7 @@
             </div>
 
           </div>
-          <label class="gate-area-body-section-label">Advanced gates</label>
+          <label class="gate-area-body-section-label">Code-restricted Gates</label>
           <div class="gate-area-body-advanced-gates">
             <div class="gateList">
               <div id="advanced-gates">
@@ -181,7 +181,7 @@
             <div class="time">0</div>
           </div>
           <div class="coding-time-option">
-            <label for="lang">Auto Run Time: </label>
+            <label for="lang">Auto-submit: </label>
             <select id="coding-time-option-select">
               <option value="2000">2s</option>
               <option value="3000">3s</option>
